--- a/source/Drey.Configuration/Drey.Configuration.csproj
+++ b/source/Drey.Configuration/Drey.Configuration.csproj
@@ -17,7 +17,7 @@
     <OutputPath>..\..\horde\drey.configuration-$(Version)\</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <NuGetPackageImportStamp>d4f755e0</NuGetPackageImportStamp>
+    <NuGetPackageImportStamp>2f03d917</NuGetPackageImportStamp>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
     <MSBuildCommunityTasksPath>$(SolutionDir)\tools\MSBuild.CommunityTasks</MSBuildCommunityTasksPath>
@@ -63,6 +63,16 @@
     <Reference Include="System.Data.SQLite">
       <HintPath>..\..\packages\System.Data.SQLite.Core.1.0.97.0\lib\net451\System.Data.SQLite.dll</HintPath>
     </Reference>
+    <Reference Include="System.IO.Compression.FileSystem" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http.Extensions">
+      <HintPath>..\..\packages\Microsoft.Net.Http.2.2.29\lib\net45\System.Net.Http.Extensions.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Net.Http.Formatting, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="System.Net.Http.Primitives">
+      <HintPath>..\..\packages\Microsoft.Net.Http.2.2.29\lib\net45\System.Net.Http.Primitives.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Net.Http.WebRequest" />
     <Reference Include="System.Web.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\Microsoft.AspNet.Razor.3.2.3\lib\net45\System.Web.Razor.dll</HintPath>
@@ -75,6 +85,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bootstrapper.cs" />
+    <Compile Include="DataModel\Release.cs" />
     <Compile Include="Infrastructure\Schema\MigrationManager.cs" />
     <Compile Include="Modules\BaseModule.cs" />
     <Compile Include="RazorConfig.cs" />
@@ -92,10 +103,17 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Nut.cs" />
     <Compile Include="Repositories\IGlobalSettingsRepository.cs" />
+    <Compile Include="Repositories\IPackageRepository.cs" />
     <Compile Include="Repositories\SQLiteRepositories\GlobalSettingsRepository.cs" />
+    <Compile Include="Repositories\SQLiteRepositories\PackageRepository.cs" />
     <Compile Include="Repositories\SQLiteRepositories\SqlRepository.cs" />
+    <Compile Include="ServiceModel\IPollingClient.cs" />
+    <Compile Include="ServiceModel\RegisteredPackagesPollingClient.cs" />
+    <Compile Include="ServiceModel\ReleasesPollingClient.cs" />
+    <Compile Include="ServiceModel\PollingClientCollection.cs" />
     <Compile Include="Services\GlobalSettingsService.cs" />
     <Compile Include="Services\IGlobalSettingsService.cs" />
+    <Compile Include="Services\PackageService.cs" />
     <Compile Include="Services\ViewModels\GlobalSettingsPmo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -148,6 +166,7 @@
     </PropertyGroup>
     <Error Condition="!Exists('..\..\packages\System.Data.SQLite.Core.1.0.97.0\build\net451\System.Data.SQLite.Core.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\System.Data.SQLite.Core.1.0.97.0\build\net451\System.Data.SQLite.Core.targets'))" />
     <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
+    <Error Condition="!Exists('..\..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets'))" />
   </Target>
   <Import Project="$(MSBuildCommunityTasksPath)\MSBuild.Community.Tasks.targets" />
   <Target Name="Zip-Binaries">
@@ -163,4 +182,5 @@
   <Target Name="AfterBuild" DependsOnTargets="CopySQLiteInteropFiles">
     <CallTarget Targets="Zip-Binaries" />
   </Target>
+  <Import Project="..\..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets" Condition="Exists('..\..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" />
 </Project>
