--- a/source/Drey.Configuration/packages.config
+++ b/source/Drey.Configuration/packages.config
@@ -5,6 +5,9 @@
   <package id="FluentMigrator" version="1.6.0" targetFramework="net451" />
   <package id="jQuery" version="2.1.4" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net451" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net451" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net451" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net451" />
   <package id="Nancy" version="1.2.0" targetFramework="net451" />
   <package id="Nancy.Hosting.Self" version="1.2.0" targetFramework="net451" />
   <package id="Nancy.Validation.DataAnnotations" version="1.2.0" targetFramework="net451" />
