--- a/source/Drey.Configuration/app.config
+++ b/source/Drey.Configuration/app.config
@@ -4,17 +4,17 @@
     <sectionGroup name="system.web.webPages.razor" type="System.Web.WebPages.Razor.Configuration.RazorWebSectionGroup, System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
       <section name="pages" type="System.Web.WebPages.Razor.Configuration.RazorPagesSection, System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" />
     </sectionGroup>
-  </configSections>
-  <appSettings>
-    <add key="webPages:Enabled" value="false" />
-  </appSettings>
+  <sectionGroup name="system.web.webPages.razor" type="System.Web.WebPages.Razor.Configuration.RazorWebSectionGroup, System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
+      <section name="pages" type="System.Web.WebPages.Razor.Configuration.RazorPagesSection, System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" />
+    </sectionGroup></configSections>
+  
   <system.web.webPages.razor>
     <pages pageBaseType="Nancy.ViewEngines.Razor.NancyRazorViewBase">
       <namespaces>
-        <add namespace="Nancy.ViewEngines.Razor" />
+        
         <add namespace="Nancy.Validation" />
         <add namespace="Drey.Configuration" />
-      </namespaces>
+      <add namespace="Nancy.ViewEngines.Razor" /></namespaces>
     </pages>
   </system.web.webPages.razor>
   <runtime>
@@ -25,4 +25,6 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-</configuration>
+<appSettings>
+    <add key="webPages:Enabled" value="false" />
+  </appSettings></configuration>
