--- a/samples/Samples.Server/App.config
+++ b/samples/Samples.Server/App.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <system.web>
+    <httpRuntime maxRequestLength="2147483647" />
+  </system.web>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
     </startup>
