--- a/source/Drey.Configuration/Drey.Configuration.csproj
+++ b/source/Drey.Configuration/Drey.Configuration.csproj
@@ -154,6 +154,7 @@
     <Compile Include="Repositories\SQLiteRepositories\PackageSettingRepository.cs" />
     <Compile Include="Repositories\SQLiteRepositories\SqlRepository.cs" />
     <Compile Include="ServiceModel\HoardeManager.cs" />
+    <Compile Include="ServiceModel\IHoardeManager.cs" />
     <Compile Include="ServiceModel\IPollingClient.cs" />
     <Compile Include="ServiceModel\IRemoteInvocationService.cs" />
     <Compile Include="ServiceModel\ListLogsService.cs" />
