--- a/source/Drey.Runtime/Drey.Runtime.csproj
+++ b/source/Drey.Runtime/Drey.Runtime.csproj
@@ -97,12 +97,12 @@
        Other similar extension points exist, see Microsoft.Common.targets.
   -->
   <Target Name="BeforeBuild">
-    <Delete Files="@(BuildArtifacts -&gt; '$(SolutionDir)\Runtime\%(Filename)%(Extension)')" />
+    <Delete Files="@(BuildArtifacts -> '$(SolutionDir)\Runtime\%(Filename)%(Extension)')" />
   </Target>
   <Target Name="AfterBuild">
     <ItemGroup>
       <BuildArtifacts Include="$(OutputPath)*.*" />
     </ItemGroup>
-    <Copy SourceFiles="@(BuildArtifacts)" DestinationFiles="@(BuildArtifacts -&gt; '$(SolutionDir)\Runtime\%(Filename)%(Extension)')" />
+    <Copy SourceFiles="@(BuildArtifacts)" DestinationFiles="@(BuildArtifacts -> '$(SolutionDir)\Runtime\%(Filename)%(Extension)')" />
   </Target>
 </Project>
